[package]
name = "sp1-prover-exex"
version = "0.1.0"
edition = "2021"

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth.git" } # Reth
reth-exex = { git = "https://github.com/paradigmxyz/reth.git" } # Execution Extensions
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git" } # Ethereum Node implementation
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git" } # Logging
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git" } # node api

eyre = "0.6"
futures-util = "0.3"
futures = "0.3.30"
http = "1.1.0"
json = "0.12.4"
hyper = "1.4.1"
tokio = "1.40.0"
reqwest = "0.12.7"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
