[package]
name = "sp1-prover-exex"
version = "0.1.0"
edition = "2021"

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth.git" } # Reth
reth-exex = { git = "https://github.com/paradigmxyz/reth.git" } # Execution Extensions
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git" } # Ethereum Node implementation
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git" } # Logging
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git" } # node api

revm-primitives = { version = "7.1.0", features = [
  "std",
], default-features = false }

revm = { version = "12.1.0", features = [
  "std",
  "secp256k1",
  "blst",
], default-features = false }
alloy-genesis = { version = "0.4.2", default-features = false }
schnellru = "0.2"
eyre = "0.6"
futures-util = "0.3"
futures = "0.3.30"
http = "1.1.0"
json = "0.12.4"
hyper = "1.4.1"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = "0.12.7"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
alloy = { version = "0.4.2", features = ["full"] }
alloy-network = "0.4.2"
alloy-primitives = "0.8.5"
alloy-sol-types = "0.8.5"
alloy-provider = "0.4.2"
alloy-contract = "0.4.2"
dotenv = "0.15.0"
sp1-sdk = "2.0.0"
tonic = "0.12.3"
yaml-config = "1.0.0"
clap = { version = "4.5.20", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.40"
parking_lot = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
